--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
 
   <body>
     <!-- write the body here -->
+	   <form action=" " id="form">
+		<input type="text" id="name">
+        <input type="number" id="age">
+       
+        <button type="submit" id="btn">submit</button>
+       </form>
+
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
