--- a/main.html
+++ b/main.html
@@ -7,12 +7,13 @@
 
   <body>
     <!-- write the body here -->
-	   <form action=" " id="form">
-		<input type="text" id="name">
+	  <div class="main-div">
+       <form action="">
         <input type="number" id="age">
-       
+        <input type="text" id="name">
         <button type="submit" id="btn">submit</button>
        </form>
+    </div>
 
 
     <script type="text/javascript" src="./script.js"></script>
