--- a/main.html
+++ b/main.html
@@ -7,12 +7,15 @@
 
   <body>
     <!-- write the body here -->
-	  <div class="main-div">
-       <form action="">
-        <input type="number" id="age">
-        <input type="text" id="name">
-        <button type="submit" id="btn">submit</button>
-       </form>
+	 <form id="myForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" required>
+        <br>
+        <label for="age">Age:</label>
+        <input type="number" id="age" required>
+        <br>
+        <button type="submit" id="btn">Submit</button>
+    </form>
     </div>
 
 
